Revision history for {{$dist->name}}

{{$NEXT}}

0.03      2017-07-12 16:45:46 -0400
  - Set perl_module_version runtime property

0.02      2017-03-29 14:29:08 -0400
  - Respect meta->{arch}
  - cleanup _alien directory for distclean

0.01      2017-02-02 13:34:58 -0500
  - initial version