@@ -1,4 +1,4 @@
-use Test2::V0;
+use Test2::V0 -no_srand => 1;
 sub require_ok ($);
 
 require_ok 'Alien::Build::MB';
