@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - set x_alienfile meta unless alien_alienfile_meta is false
 
 0.03      2017-07-12 16:45:46 -0400
   - Set perl_module_version runtime property
